--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE HTML>
-<!--
-	Photon by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Photon by HTML5 UP</title>
+		<title>DadiTech</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,7 +13,7 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon major fa-cloud"></span>
+					<img src="images/logo.png" alt="DadiTech" />
 					<h1>Hi, I'm <strong>Photon</strong>, another fine<br />
 					little freebie from <a href="http://html5up.net">HTML5 UP</a>.</h1>
 					<p>Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
