--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 			<section id="header">
 				<div class="inner">
 					<img src="images/logo.png" alt="DadiTech" />
-					<h1>Hi, I'm <strong>Photon</strong>, another fine<br />
-					little freebie from <a href="http://html5up.net">HTML5 UP</a>.</h1>
-					<p>Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
-					lobortis feugiat sapien sed etiam volutpat accumsan.</p>
+					<h1>Welcome to <strong>DadiTech</strong>, <br/>
+					a fine digital solution provider.</h1>
+					<p>We offer a wide range of digital solutions to our customers.</p>
 					<ul class="actions">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
 					</ul>
