--- a/index.html
+++ b/index.html
@@ -29,10 +29,16 @@
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>Who we are</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
+							<p>
+								We are a highly experienced team of professional software engineers that offer a wide range of 
+								end to end digital solutions to our customers.
+							</p>
+
+							<p>
+								Our team has been dedicated to improve our customers’ digital experience and aiming to provide best in class customer support.
+							</p>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
