--- a/index.html
+++ b/index.html
@@ -59,28 +59,36 @@
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
 							<ul class="major-icons">
-								<li><span class="icon style1 major fa-code"></span></li>
-								<li><span class="icon style2 major fa-bolt"></span></li>
-								<li><span class="icon style3 major fa-camera-retro"></span></li>
-								<li><span class="icon style4 major fa-cog"></span></li>
-								<li><span class="icon style5 major fa-desktop"></span></li>
-								<li><span class="icon style6 major fa-calendar"></span></li>
+								<li><span class="icon style1 major fa-desktop"></span></li>
+								<li><span class="icon style2 major fa-code"></span></li>
+								<li><span class="icon style3 major fa-calendar"></span></li>
+								<li><span class="icon style4 major fa-cloud"></span></li>
 							</ul>
 						</div>
 						<div class="6u$ 12u$(medium)">
 							<header class="major">
 								<h2>What we do</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
+							<br />
+							<p>
+								Website Design, Development, Deployment and Maintenance
+							</p>
+							<p>
+								Digital Solution Consultancy
+							</p>
+							<p>
+								Cloud Computing Development
+							</p>
+							<p>
+								And Ongoing Support to Your Digital Product
+							</p>
 						</div>
 					</div>
 				</div>
 			</section>
 
 		<!-- Three -->
-			<section id="three" class="main style1 special">
+			<!--<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
 						<h2>Adipiscing amet consequat</h2>
@@ -113,18 +121,17 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</section>-->
 
 		<!-- Four -->
 			<section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
-						<h2>Ipsum feugiat consequat?</h2>
+						<h2>Interested?</h2>
 					</header>
-					<p>Sed lacus nascetur ac ante amet sapien.</p>
+					<p>Get In Touch Now.</p>
 					<ul class="actions uniform">
-						<li><a href="#" class="button special">Sign Up</a></li>
-						<li><a href="#" class="button">Learn More</a></li>
+						<li><a href="mailto:admin@daditech.com" class="button special">Email Us</a></li>
 					</ul>
 				</div>
 			</section>
@@ -452,14 +459,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="mailto:admin@daditech.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; DadiTech</li>
 				</ul>
 			</section>
 
